Amended the kittens.jpg image to a img src instead of css background-image as it was not responsive to smaller viewports. Created a lot of whitespace underneath the image in smaller viewports. This was resolved by using an img src and the class img-fluid.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,17 +384,11 @@ dd {
 }
 
 .kittens-img {
-    background-color:#eeeff4;
-    background-image: url("../images/kittens.jpg");
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 392px;
+   background-color: #fdfdfd;
+    }
 
-}
-
-.color-bg {
-    background-color:#eeeff4;
+.color-bg-form {
+    background: linear-gradient(#eeeff4, #fdfdfd, #fdfdfd)
 }
 
 /******FAQ******/
